--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -72,7 +74,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^2.11.5",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
